# xvc-front

./: .gitignore  INSTALL.md  README.md
.github/workflows/: installer.yml
docs/: BACKEND.md  BENCHMARKS.md  MAC_APP.md  PERFORMANCE.md  PROTOCOL.md  ROADMAP.md
docs/reference/: hearmeout-xvc-server.py
mac/: .gitignore  Package.swift  README.md  build-app.sh
mac/Sources/XVCCore/: AudioDevices.swift  AudioIO.swift  JitterBuffer.swift  LatencyTracker.swift  XVCClient.swift
mac/Sources/XVCLiveMic/: AppSettings.swift  Engine.swift  SettingsWindow.swift  StatusItemController.swift  main.swift
mac/Sources/xvc-cli/: AudioDevices.swift  AudioIO.swift  JitterBuffer.swift  LatencyTracker.swift  XVCClient.swift  main.swift
mac/driver/: build.sh  xvcmic_names.h
mac/installer/: build-pkg.sh  install.sh  make-icon.swift  postinstall  uninstall.sh
server/: README.md  bench.py  bootstrap.sh  download_models.py  pyproject.toml  restart.sh  run.sh  setup.sh  xvc_server.py
tools/: mps_bench.py  probe_stream.py
